--- a/flower.html
+++ b/flower.html
@@ -10,6 +10,7 @@
 </head>
 <body class="container">
   <!-- Pembuat code: https://codepen.io/mdusmanansari/pen/BamepLe -->
+        <div class="love-message">I Love You Nur Inayah Ramadhani</div>
     <div class="night"></div>
     <div class="flowers">
       <div class="flower flower--1">
