--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <span>O</span>
     </div>
     <div class="description">
-         <span>Nur Inayah Ramadhani , Kesayangan Aku</span>
+         <span>Nur Inayah Ramadhani , Kesayangan Aku💖</span> <br>
         <span>Aku ada hadiah spesial buat kamu!!</span>
     </div>
     <div class="button">
